# Mr.Trafick

./: CMakeLists.txt  HTTPSniffer.cpp  README.md  build_and_run.sh
lib/: custom_printer.h
lib/firebase/: firebase_realtime_database.cpp  firebase_realtime_database.h  firebase_storage.cpp  firebase_storage.h
lib/io/: text_file_writer.cpp  text_file_writer.h
lib/os/: ElevatedPrivilegesChecker.cpp  ElevatedPrivilegesChecker.h
